Se creó con Colab

--- a/02 - preprocesado.ipynb
+++ b/02 - preprocesado.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNreS42M03Vm4gdUzcDGAiE",
+      "authorship_tag": "ABX9TyNcBjFh2t8wIsg4menJgEuR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,19 +37,19 @@
       "metadata": {
         "id": "YwvxIPBm9ymM"
       },
-      "execution_count": 48,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
         },
         "id": "hfKtpXymE1SW",
-        "outputId": "3868a062-76dc-4ed8-9f20-ef1181d2f3f6"
+        "outputId": "936b4da4-e1f0-4310-a98e-93641481e034"
       },
       "outputs": [
         {
@@ -79,7 +79,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 8
         }
       ],
       "source": [
@@ -100,9 +100,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7fe44af4-8dd9-4f4b-cbf8-2f5c41133cbf"
+        "outputId": "a0561960-aefc-49ab-a8e1-254eee21876b"
       },
-      "execution_count": 50,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
           "text": [
             "Downloading udea-ai-4-eng-20252-pruebas-saber-pro-colombia.zip to /content\n",
             "\r  0% 0.00/29.9M [00:00<?, ?B/s]\n",
-            "\r100% 29.9M/29.9M [00:00<00:00, 1.28GB/s]\n"
+            "\r100% 29.9M/29.9M [00:00<00:00, 904MB/s]\n"
           ]
         }
       ]
@@ -126,9 +126,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fwDjEUB99R77",
-        "outputId": "026676fa-4908-40aa-aec9-e109dfe8b73e"
+        "outputId": "ab56cfaa-ac7b-4fc5-fedc-c049a6f89045"
       },
-      "execution_count": 51,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
       "metadata": {
         "id": "fIgcwgAe9mCS"
       },
-      "execution_count": 52,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -172,9 +172,9 @@
           "height": 429
         },
         "id": "4aPhyrI79oJv",
-        "outputId": "1acefec6-9ae5-403f-c2c4-6cb51ce05207"
+        "outputId": "35db0a73-eeb5-40f3-8d13-3738126f8cb0"
       },
-      "execution_count": 53,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +233,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1fc67ba4-8767-4f3a-ba67-8edd3bf4bd4d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-541ba7f7-85de-4596-aa43-8eb42ab94cf7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -403,7 +403,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1fc67ba4-8767-4f3a-ba67-8edd3bf4bd4d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-541ba7f7-85de-4596-aa43-8eb42ab94cf7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -455,12 +455,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1fc67ba4-8767-4f3a-ba67-8edd3bf4bd4d button.colab-df-convert');\n",
+              "        document.querySelector('#df-541ba7f7-85de-4596-aa43-8eb42ab94cf7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1fc67ba4-8767-4f3a-ba67-8edd3bf4bd4d');\n",
+              "        const element = document.querySelector('#df-541ba7f7-85de-4596-aa43-8eb42ab94cf7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -480,8 +480,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-d2095ad2-a8a8-4e3f-91e2-ff1d65b4834b\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d2095ad2-a8a8-4e3f-91e2-ff1d65b4834b')\"\n",
+              "    <div id=\"df-b717b904-4415-4f9a-a193-265db8e051a2\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b717b904-4415-4f9a-a193-265db8e051a2')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -600,7 +600,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-d2095ad2-a8a8-4e3f-91e2-ff1d65b4834b button');\n",
+              "            document.querySelector('#df-b717b904-4415-4f9a-a193-265db8e051a2 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -616,7 +616,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 12
         }
       ]
     },
@@ -628,7 +628,6 @@
         "# ============================================================\n",
         "\n",
         "# Mostrar valores faltantes\n",
-        "print(\"Valores faltantes por columna:\")\n",
         "print(df.isna().sum())\n",
         "\n",
         "# Eliminar columnas completamente vacías\n",
@@ -644,15 +643,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7gKnqQrRhtRB",
-        "outputId": "83ba9185-cc32-44c8-f8c4-2d0fa3cac7bc"
+        "outputId": "64425388-3c6f-45eb-d32b-c497fe9a1ca6"
       },
-      "execution_count": 54,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Valores faltantes por columna:\n",
             "ID                                 0\n",
             "PERIODO_ACADEMICO                  0\n",
             "E_PRGM_ACADEMICO                   0\n",
@@ -718,7 +716,7 @@
       "metadata": {
         "id": "gRwyQ9Y4hxPI"
       },
-      "execution_count": 55,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -745,26 +743,13 @@
         "        )\n",
         "        # Rellenamos los NaN con 0 (sin usar inplace)\n",
         "        df[col] = df[col].fillna(0)\n",
-        "\n",
-        "print(\"✅ Variables binarias convertidas correctamente.\")\n"
+        "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ks2Bye9RjaIx",
-        "outputId": "d292ea76-735e-4af3-c1c9-5d54d95cb758"
+        "id": "Ks2Bye9RjaIx"
       },
-      "execution_count": 56,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Variables binarias convertidas correctamente.\n"
-          ]
-        }
-      ]
+      "execution_count": 15,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -793,27 +778,13 @@
         "# Imputar categóricas con el valor más frecuente\n",
         "if len(cat_cols) > 0:\n",
         "    imputer_cat = SimpleImputer(strategy=\"most_frequent\")\n",
-        "    df[cat_cols] = imputer_cat.fit_transform(df[cat_cols])\n",
-        "\n",
-        "print(\"✅ Imputación de valores faltantes completada.\")"
+        "    df[cat_cols] = imputer_cat.fit_transform(df[cat_cols])\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "elDzUbJEh2yU",
-        "outputId": "aa6c76ba-4989-4242-bab1-9534814f43df"
+        "id": "elDzUbJEh2yU"
       },
-      "execution_count": 57,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Imputación de valores faltantes completada.\n"
-          ]
-        }
-      ]
+      "execution_count": 16,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -822,26 +793,13 @@
         "# 7. One-Hot Encoding de variables categóricas\n",
         "# ============================================================\n",
         "\n",
-        "df_encoded = pd.get_dummies(df, columns=cat_cols, drop_first=True)\n",
-        "print(\"Forma después del one-hot encoding:\", df_encoded.shape)\n"
+        "df_encoded = pd.get_dummies(df, columns=cat_cols, drop_first=True)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vc13SuSKh-BO",
-        "outputId": "d3e6910c-aa07-4287-baf0-0b8a4556090a"
+        "id": "vc13SuSKh-BO"
       },
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Forma después del one-hot encoding: (692500, 1018)\n"
-          ]
-        }
-      ]
+      "execution_count": 17,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -851,27 +809,13 @@
         "# ============================================================\n",
         "\n",
         "scaler = StandardScaler()\n",
-        "df_encoded[num_cols] = scaler.fit_transform(df_encoded[num_cols])\n",
-        "\n",
-        "print(\"✅ Escalamiento completado.\")\n"
+        "df_encoded[num_cols] = scaler.fit_transform(df_encoded[num_cols])\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "N9OPgZ3UkE_L",
-        "outputId": "f40f4e0f-63b0-4a69-dcad-ee04e1dd1daf"
+        "id": "N9OPgZ3UkE_L"
       },
-      "execution_count": 59,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Escalamiento completado.\n"
-          ]
-        }
-      ]
+      "execution_count": 18,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -884,9 +828,9 @@
           "height": 461
         },
         "id": "5VjrBPx1kGvu",
-        "outputId": "3e474d0c-229d-4b99-eac3-885058148cd4"
+        "outputId": "92674706-3885-4424-b6a0-f91f14e51a20"
       },
-      "execution_count": 60,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1052,7 +996,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fb15cc2e-b044-4ce6-9c88-425ea8f3152b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c2e5fd62-4e38-447a-b72d-5271de7cbd58\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1366,7 +1310,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fb15cc2e-b044-4ce6-9c88-425ea8f3152b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c2e5fd62-4e38-447a-b72d-5271de7cbd58')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1418,12 +1362,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-fb15cc2e-b044-4ce6-9c88-425ea8f3152b button.colab-df-convert');\n",
+              "        document.querySelector('#df-c2e5fd62-4e38-447a-b72d-5271de7cbd58 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-fb15cc2e-b044-4ce6-9c88-425ea8f3152b');\n",
+              "        const element = document.querySelector('#df-c2e5fd62-4e38-447a-b72d-5271de7cbd58');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1443,8 +1387,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-bb126cdb-7767-4240-af53-a448d96d1163\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bb126cdb-7767-4240-af53-a448d96d1163')\"\n",
+              "    <div id=\"df-f5219e16-bda1-48ab-98ed-ac02d9b7b604\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f5219e16-bda1-48ab-98ed-ac02d9b7b604')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1563,14 +1507,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-bb126cdb-7767-4240-af53-a448d96d1163 button');\n",
+              "            document.querySelector('#df-f5219e16-bda1-48ab-98ed-ac02d9b7b604 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_a394002e-f766-4e84-abd5-c6875ad635b9\">\n",
+              "  <div id=\"id_f7ece9c2-e9ca-44c6-b3ab-838bacdb7613\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1614,7 +1558,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_a394002e-f766-4e84-abd5-c6875ad635b9 button.colab-df-generate');\n",
+              "        document.querySelector('#id_f7ece9c2-e9ca-44c6-b3ab-838bacdb7613 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1634,7 +1578,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 19
         }
       ]
     },
@@ -1644,7 +1588,7 @@
       "metadata": {
         "id": "JxRNsmfgodev"
       },
-      "execution_count": 60,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1655,7 +1599,7 @@
       "metadata": {
         "id": "FKCaRYYc9Yo9"
       },
-      "execution_count": 61,
+      "execution_count": 20,
       "outputs": []
     }
   ]
